# universal_exchange_rates

./: LICENSE  README.md  pyproject.toml
tests/: test_api.py
universal_exchange_rates/: __init__.py  api.py
